Made the gap in newbark theme a bit shorter, added somehow missing robot sprites

--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -9939,6 +9939,12 @@
     <Content Include="Content\Textures\OverworldSprites\rival.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Textures\OverworldSprites\robot1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Textures\OverworldSprites\robot2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Textures\OverworldSprites\robot3.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
