--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -153,6 +153,8 @@
     </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Import Include="NAudio" />
+    <Import Include="NAudio.Vorbis" />
     <Import Include="System.Collections.Generic" />
     <Import Include="System.Diagnostics" />
     <Import Include="System.Linq" />
